add cohenrence check of links and area